# gpui-video

./: Cargo.toml  README.md
examples/: looping.rs  video_player.rs  with_controls.rs
src/: element.rs  video.rs
