[package]
name = "gpui-video"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
exclude = ["assets", ".github"]
authors = ["xhzrd"]
description = "A high-performance video player library for GPUI applications, powered by FFmpeg and CPAL"
homepage = "https://github.com/xhzrd/gpui-video"
repository = "https://github.com/xhzrd/gpui-video"
license = "MIT"
readme = "README.md"
keywords = ["gpui", "video", "player", "ffmpeg", "multimedia"]
categories = ["multimedia", "multimedia::video", "gui"]
documentation = "https://docs.rs/gpui-video"

[dependencies]
gpui = "0.2"
ffmpeg-next = "8.0.0"
crossbeam-channel = "0.5"
log = "0.4"
thiserror = "2"
url = "2" # media uri
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp"] }
smallvec = "1"
yuv = "0.8"
cpal = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-video = "0.4"
core-foundation = "0.10"

[dev-dependencies]
env_logger = "0.11"
gpui-component = "0.2"
